force-app/main/default/objects/Deposit__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Account or reference number for the deposit.</description>
    <label>Account Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>