force-app/main/default/objects/Deposit__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Account type: Checking, Savings, CD, MMA.</description>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
                <default>true</default>
                <label>Savings</label>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>MMA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>