force-app/main/default/objects/Deposit__c/fields/Deposit_Date__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Date__c</fullName>
    <description>Date the deposit was made.</description>
    <label>Deposit Date</label>
    <type>Date</type>
</CustomField>