force-app/main/default/objects/Deposit__c/fields/Deposit_Type__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Type__c</fullName>
    <description>Type of deposit product.</description>
    <label>Deposit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
                <default>true</default>
                <label>Savings</label>
            </value>
            <value>
                <fullName>Certificate of Deposit</fullName>
            </value>
            <value>
                <fullName>Money Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>