force-app/main/default/objects/Deposit__c/fields/Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Date__c</fullName>
    <description>Date the deposit matures (e.g. for term deposits or CDs).</description>
    <label>Maturity Date</label>
    <type>Date</type>
</CustomField>